[gd_scene load_steps=3 format=3 uid="uid://dmbd2xmxgclq6"]

[ext_resource type="Script" uid="uid://d27smyh17ev13" path="res://Scenes/UI/PlayerCustomizationMenu/NameEditMenu/name_edit_menu.gd" id="1_s72qc"]

[sub_resource type="LabelSettings" id="LabelSettings_l52l4"]
font_size = 32

[node name="Name" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_s72qc")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Name"
label_settings = SubResource("LabelSettings_l52l4")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 9.0

[node name="Add" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "+"

[node name="NameList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
auto_width = true
auto_height = true
item_count = 3
item_0/text = "haha"
item_1/text = "hehe"
item_2/text = "hoho"

[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Add" to="." method="_on_add_pressed"]
[connection signal="item_activated" from="VBoxContainer/NameList" to="." method="_on_item_list_item_activated"]
